fix/Set active NavLink in CategoryScrollbar
close #203

--- a/client/src/components/CategoryScrollBar/CategoryScrollBar.module.css
+++ b/client/src/components/CategoryScrollBar/CategoryScrollBar.module.css
@@ -14,6 +14,11 @@
   text-decoration: none;
 }
 
+.active {
+  background-color: teal !important;
+  color: white !important;
+}
+
 .linkStyle:hover {
   background-color: teal;
   color: white;
